Table Student {
  student_id int [pk]
}

Table Guardian {
  guardian_id int [pk]
}

Table Student_Guardian {
  student_id int
  guardian_id int
}

Table Academic_Year {
  academic_year_id int [pk]
}

Table Term {
  term_id int [pk]
  academic_year_id int
}

Table Class_Level {
  class_level_id int [pk]
}

Table Stream {
  stream_id int [pk]
  class_level_id int
}

Table Enrollment {
  enrollment_id int [pk]
  student_id int
  academic_year_id int
}

Table Subject {
  subject_id int [pk]
}

Table Teacher {
  teacher_id int [pk]
}

Table Teacher_Subject {
  teacher_id int
  subject_id int
}

Table Class {
  class_id int [pk]
  stream_id int
}

Table Teacher_Class {
  teacher_id int
  class_id int
}

Table Attendance {
  attendance_id int [pk]
  student_id int
  term_id int
}

Table Result {
  result_id int [pk]
  student_id int
  subject_id int
  term_id int
}

Table Generic_Skill {
  skill_id int [pk]
}

Table Skill_Assessment {
  assessment_id int [pk]
  student_id int
  skill_id int
  term_id int
}

Table Fee_Payment {
  payment_id int [pk]
  student_id int
}

Table Discipline_Record {
  discipline_id int [pk]
  student_id int
}

Table Library_Book {
  book_id int [pk]
}

Table Library_Loan {
  loan_id int [pk]
  student_id int
  book_id int
}

Table Staff_Role {
  role_id int [pk]
}

Table Staff {
  staff_id int [pk]
  role_id int
}

Table Timetable {
  timetable_id int [pk]
  teacher_id int
  class_id int
}

Table Announcement {
  announcement_id int [pk]
  staff_id int
}

Table Promotion_Record {
  promotion_id int [pk]
  student_id int
}

Table Transfer_Record {
  transfer_id int [pk]
  student_id int
}

Table Repetition_Record {
  repetition_id int [pk]
  student_id int
}

/* RELATIONSHIPS */

Ref: Term.academic_year_id > Academic_Year.academic_year_id

Ref: Stream.class_level_id > Class_Level.class_level_id

Ref: Enrollment.student_id > Student.student_id
Ref: Enrollment.academic_year_id > Academic_Year.academic_year_id

Ref: Attendance.student_id > Student.student_id
Ref: Attendance.term_id > Term.term_id

Ref: Result.student_id > Student.student_id
Ref: Result.subject_id > Subject.subject_id
Ref: Result.term_id > Term.term_id

Ref: Skill_Assessment.student_id > Student.student_id
Ref: Skill_Assessment.skill_id > Generic_Skill.skill_id
Ref: Skill_Assessment.term_id > Term.term_id

Ref: Fee_Payment.student_id > Student.student_id

Ref: Discipline_Record.student_id > Student.student_id

Ref: Library_Loan.student_id > Student.student_id
Ref: Library_Loan.book_id > Library_Book.book_id

Ref: Staff.role_id > Staff_Role.role_id

Ref: Timetable.teacher_id > Teacher.teacher_id
Ref: Timetable.class_id > Class.class_id

Ref: Announcement.staff_id > Staff.staff_id

Ref: Promotion_Record.student_id > Student.student_id
Ref: Transfer_Record.student_id > Student.student_id
Ref: Repetition_Record.student_id > Student.student_id

/* MANY-TO-MANY RELATIONSHIPS */

Ref: Student_Guardian.student_id > Student.student_id
Ref: Student_Guardian.guardian_id > Guardian.guardian_id

Ref: Teacher_Subject.teacher_id > Teacher.teacher_id
Ref: Teacher_Subject.subject_id > Subject.subject_id

Ref: Teacher_Class.teacher_id > Teacher.teacher_id
Ref: Teacher_Class.class_id > Class.class_id

Ref: Class.stream_id > Stream.stream_id

